@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-11T16:11:11Z",
-  "count" : 10,
-  "count_minmax" : [ 8, 10 ],
-  "count_decinc" : [ -0, +10 ],
-  "uniques" : 9,
-  "uniques_minmax" : [ 7, 9 ],
-  "uniques_decinc" : [ -0, +9 ]
+  "timestamp" : "2023-08-12T00:41:40Z",
+  "count" : 20,
+  "count_minmax" : [ 8, 20 ],
+  "count_decinc" : [ -0, +20 ],
+  "uniques" : 16,
+  "uniques_minmax" : [ 7, 16 ],
+  "uniques_decinc" : [ -0, +16 ]
 }
