@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-11T16:11:11Z",
-  "count_outdated" : 2638,
-  "uniques_outdated" : 1005,
-  "count" : 2756,
-  "uniques" : 1085,
+  "timestamp" : "2023-08-12T00:41:40Z",
+  "count_outdated" : 2643,
+  "uniques_outdated" : 1008,
+  "count" : 2766,
+  "uniques" : 1092,
   "clones" : [
-    {
-      "timestamp": "2023-07-28T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 5 ],
-      "count_decinc": [ 4, 5 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 3 ],
-      "uniques_decinc": [ 2, 3 ]
-    },
     {
       "timestamp": "2023-07-29T00:00:00Z",
       "count": 2,
@@ -97,12 +88,12 @@
     },
     {
       "timestamp": "2023-08-11T00:00:00Z",
-      "count": 10,
-      "count_minmax": [ 8, 10 ],
-      "count_decinc": [ 0, 10 ],
-      "uniques": 9,
-      "uniques_minmax": [ 7, 9 ],
-      "uniques_decinc": [ 0, 9 ]
+      "count": 20,
+      "count_minmax": [ 8, 20 ],
+      "count_decinc": [ 0, 20 ],
+      "uniques": 16,
+      "uniques_minmax": [ 7, 16 ],
+      "uniques_decinc": [ 0, 16 ]
     }
   ]
 }
